--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,17 @@
 <% if user_signed_in? %>
     <h1>Logado</h1>
     <%= link_to "Sign out", destroy_user_session_path, data: { "turbo-method": :delete }, class: 'btn btn-primary btn-lg' %>
+
+    <%= form_with model: Tweet.new, url: tweets_path, method: :post, local: true do |f| %>
+        <%= f.text_field :body %>
+        <%= f.submit %>
+    <% end %>
+
+    <ul>
+        <% Tweet.find_each do |tweet| %>
+            <li><%= tweet.body %></li>
+        <% end %>
+    </ul
 <% else %>
     <h1>Ola</h1>
     <%= link_to 'Sign up', new_user_registration_path, class: 'btn btn-primary btn-lg' %>
