--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,13 +1,65 @@
-<h1>Logado</h1>
-<%= link_to "Sign out", destroy_user_session_path, data: { "turbo-method": :delete }, class: 'btn btn-primary btn-lg' %>
+<div class="container py-2">
+    <div class="row">
+        <aside class="col side-navbar">
+            <%= link_to root_path, class: "d-flex align-items-center fs-5 mb-2 px-3", id: "twitter-logo-link" do %>
+                <%= image_tag "logo.png", width: "32" %>
+            <% end %>
 
-<%= form_with model: Tweet.new, url: tweets_path, method: :post, local: true do |f| %>
-    <%= f.text_field :body %>
-    <%= f.submit %>
-<% end %>
+            <%= link_to root_path, class: "d-flex align-items-center fs-5 mb-2" do %>
+                <div class="px-3 py-2 rounded-pill">
+                    <span class="me-4 position-relative" style="bottom: 3px;"><%= image_tag "home.png", width: "32" %></span>
+                    Home
+                </div>
+            <% end %>
 
-<ul>
-    <% Tweet.find_each do |tweet| %>
-        <li><%= tweet.body %></li>
-    <% end %>
-</ul>
+            <%= link_to root_path, class: "d-flex align-items-center fs-5 mb-2" do %>
+                <div class="px-3 py-2 rounded-pill">
+                    <span class="me-4 position-relative" style="bottom: 3px;"><%= image_tag "internet-explorer.png", width: "32" %></span>
+                    Explorer
+                </div>
+            <% end %>
+
+            <%= link_to root_path, class: "d-flex align-items-center fs-5 mb-2" do %>
+               <div class="px-3 py-2 rounded-pill">
+                    <span class="me-4 position-relative" style="bottom: 3px;"><%= image_tag "packard-bell.png", width: "32" %></span>
+                    Notification
+                </div>
+            <% end %>
+
+            <%= link_to root_path, class: "d-flex align-items-center fs-5 mb-2" do %>
+                <div class="px-3 py-2 rounded-pill">
+                    <span class="me-4 position-relative" style="bottom: 3px;"><%= image_tag "text-message.png", width: "32" %></span>
+                    Message
+                </div>
+            <% end %>
+
+            <%= link_to root_path, class: "d-flex align-items-center fs-5 mb-2" do %>
+                <div class="px-3 py-2 rounded-pill">
+                    <span class="me-4 position-relative" style="bottom: 3px;"><%= image_tag "user-interface.png", width: "32" %></span>
+                    Profile
+                </div>
+            <% end %>
+
+            <%= link_to root_path, class: "d-flex align-items-center fs-5 mb-2 px-4" do %>
+                <%= button_tag "Tweet", class: "btn btn-primary rounded-pill btn-lg" %>
+            <% end %>
+
+
+            <%= link_to "Sign out", destroy_user_session_path, data: { "turbo-method": :delete }, class: 'btn btn-primary btn-lg' %>
+        </div>
+        <div class="col">
+            <%= form_with model: Tweet.new, url: tweets_path, method: :post, local: true do |f| %>
+                <%= f.text_field :body %>
+                <%= f.submit %>
+            <% end %>
+            <ul>
+                <% Tweet.find_each do |tweet| %>
+                    <li><%= tweet.body %></li>
+                <% end %>
+            </ul>
+        </div>
+        <div class="col">
+          
+        </div>
+    </div>
+</div>
