--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,61 +1,24 @@
-<div class="container py-2">
-  <div class="row">
-    <aside class="col side-navbar">
-      <%= link_to root_path, class: "d-flex align-items-center fs-5 mb-3 px-3", id: "twitter-logo-link" do %>
-        <%= image_tag "logo.png", width: "32" %>
-      <% end %>
-      <%= link_to root_path, class: "d-flex align-items-center fs-5 mb-3" do %>
-        <div class="px-3 py-2 rounded-pill">
-          <span class="me-4 position-relative" style="bottom: 3px;"><%= image_tag "home.png", width: "32" %></span>
-          Home
-        </div>
-      <% end %>
-      <%= link_to root_path, class: "d-flex align-items-center fs-5 mb-3" do %>
-        <div class="px-3 py-2 rounded-pill">
-          <span class="me-4 position-relative" style="bottom: 3px;"><%= image_tag "internet-explorer.png", width: "32" %></span>
-          Explorer
-        </div>
-      <% end %>
-      <%= link_to root_path, class: "d-flex align-items-center fs-5 mb-3" do %>
-        <div class="px-3 py-2 rounded-pill">
-          <span class="me-4 position-relative" style="bottom: 3px;"><%= image_tag "packard-bell.png", width: "32" %></span>
-          Notification
-        </div>
-      <% end %>
-      <%= link_to root_path, class: "d-flex align-items-center fs-5 mb-3" do %>
-        <div class="px-3 py-2 rounded-pill">
-          <span class="me-4 position-relative" style="bottom: 3px;"><%= image_tag "text-message.png", width: "32" %></span>
-          Message
-        </div>
-      <% end %>
-      <%= link_to root_path, class: "d-flex align-items-center fs-5 mb-3" do %>
-        <div class="px-3 py-2 rounded-pill">
-          <span class="me-4 position-relative" style="bottom: 3px;"><%= image_tag "user-interface.png", width: "32" %></span>
-          Profile
-        </div>
-      <% end %>
-
-      <div class="d-flex align-items-center fs-4 px-4 mb-4">
-        <%= button_tag "Tweet", class: "btn rounded-pill btn-twitter w-100 btn-lg" %>
-      </div> 
-
-      <div class="d-flex align-items-center fs-6 px-4 mb-4">
-        <%= link_to "Sign out", destroy_user_session_path, data: { "turbo-method": :delete }, class: 'twitter-link' %>
-      </div> 
-    </aside>
-    <div class="col-7">
-      <%= form_with model: Tweet.new, url: tweets_path, method: :post, local: true do |f| %>
-        <%= f.text_field :body %>
-        <%= f.submit %>
-      <% end %>
-      <ul>
-        <% Tweet.find_each do |tweet| %>
-          <li><%= tweet.body %></li>
-        <% end %>
-      </ul>
-    </div>
-    <div class="col">
-      asdf
-    </div>
+<div class="col-7">
+  <div class="mb-3">
+    <%= link_to "Home", root_path, class: "fs-4 text-decoration-none text-black fw-semibold" %>
   </div>
+  <%= form_with model: Tweet.new, url: tweets_path, method:  :post, local: true, class: "w-100" do |f| %>
+    <%= f.text_area :body, placeholder: "What's happening?",class: "w-100 form-control tweet-input mb-4" %>
+    <div class="d-flex justify-content-end">
+      <%= f.submit "Tweet", class: "btn btn-lg btn-twitter rounded-pill" %>
+    </div>
+  <% end %>
+  <ul>
+    <% Tweet.find_each do |tweet| %>
+      <li><%= tweet.body %></li>
+    <% end %>
+  </ul>
+</div>
+<div class="col">
+  <h2>Users</h2>
+  <ul>
+    <% User.find_each do |user| %>
+      <li><%= user.username %></li>
+    <% end %>
+  </ul>
 </div>
