--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,13 +2,8 @@
   <div class="mb-3">
     <%= link_to "Home", root_path, class: "fs-4 text-decoration-none text-black fw-semibold" %>
   </div>
-  <%= form_with model: Tweet.new, url: tweets_path, method:  :post, local: true, class: "w-100" do |f| %>
-    <%= f.text_area :body, placeholder: "What's happening?",class: "w-100 form-control tweet-input mb-4" %>
-    <div class="d-flex justify-content-end">
-      <%= f.submit "Tweet", class: "btn btn-lg btn-twitter rounded-pill" %>
-    </div>
-  <% end %>
-  <ul>
+    <%= render 'shared/tweet_form'%>
+    <ul>
     <% Tweet.find_each do |tweet| %>
       <li><%= tweet.body %></li>
     <% end %>
