--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -34,7 +34,7 @@
       <% end %>
 
       <div class="d-flex align-items-center fs-4 px-4 mb-4">
-        <%= button_tag "Tweet", class: "btn rounded-pill btn-twitter w-100 btn-lg" %>
+        <%= button_tag "Tweet", class: "btn rounded-pill btn-twitter w-100 btn-lg", data: { "bs-toggle": "modal", "bs-target": "#exampleModal" } %>
       </div> 
 
       <div class="d-flex align-items-center fs-6 px-4 mb-4">
@@ -42,4 +42,16 @@
       </div> 
     </aside>
 
-
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header border-bottom-0">
+        <button type="button" class="btn-close mx-0" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <%= render "shared/tweet_form" %>
+      </div>
+   </div>
+  </div>
+</div>
