--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,12 +2,10 @@
   <div class="mb-3">
     <%= link_to "Home", root_path, class: "fs-4 text-decoration-none text-black fw-semibold" %>
   </div>
-    <%= render 'shared/tweet_form'%>
-    <ul>
-    <% Tweet.find_each do |tweet| %>
-      <li><%= tweet.body %></li>
-    <% end %>
-  </ul>
+  <div class="mb-3">
+    <%= render 'shared/tweet_form' %>
+  </div>
+  <%= render Tweet.order(created_at: :desc) %>
 </div>
 <div class="col">
   <h2>Users</h2>
