--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -5,7 +5,9 @@
   <div class="mb-3">
     <%= render 'shared/tweet_form' %>
   </div>
-  <%= render Tweet.order(created_at: :desc) %>
+  <div id="tweets">
+    <%= render Tweet.order(created_at: :desc) %>
+  </div>
 </div>
 <div class="col">
   <h2>Users</h2>
