--- a/app/views/shared/_tweet_form.html.erb
+++ b/app/views/shared/_tweet_form.html.erb
@@ -1,7 +1,6 @@
-<%= form_with model: Tweet.new, url: tweets_path, method:  :post, local: true, class: "w-100" do |f| %>
+<%= form_with model: Tweet.new, url: tweets_path, method:  :post, data: { controller: 'tweet-form' }, class: "w-100" do |f| %>
   <%= f.text_area :body, placeholder: "What's happening?",class: "w-100 form-control tweet-input mb-4" %>
   <div class="d-flex justify-content-end">
-     <%= f.submit "Tweet", class: "btn btn-lg btn-twitter rounded-pill" %>
+    <%= f.submit "Tweet", class: "btn btn-lg btn-twitter rounded-pill" %>
   </div>
 <% end %>
-
