Update button styles in devise views

--- a/app/views/usernames/new.html.erb
+++ b/app/views/usernames/new.html.erb
@@ -9,6 +9,6 @@
       <%= f.label :display_name, class: "form-label" %>
       <%= f.text_field :display_name, class: "form-control"%>
     </div>
-    <%= f.submit "Set username", class: "btn btn-primary btn-lg" %>
+    <%= f.submit "Set username", class: "btn btn-primary btn-twitter rounded-pill" %>
   <% end %>
 </div>
