--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -1,10 +1,39 @@
 .tweet {
-   &:hover {
+  &:hover {
     -moz-transition: all 0.1s ease-in-out;
     -o-transition: all 0.1s ease-in-out;
     -webkit-transition: all 0.1s ease-in-out;
     transition: all 0.1s ease-in-out;
     background-color: $gray-200;
     cursor: pointer;
+  }
+
+  .action-links {
+    a {
+      span {
+        position: relative;
+        top: 2px;
+      }
+
+      &.views,
+      &.replies,
+      &.bookmark {
+        &:hover {
+          color: $twitter-blue !important;
+        }
+      }
+
+      &.retweets {
+        &:hover {
+          color: $green-300 !important;
+        }
+      }
+
+      &.likes {
+        &:hover {
+          color: $red-500 !important;
+        }
+      }
+    }
   }
 }
