--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -12,7 +12,40 @@
           @<%= tweet_presenter.username %> . <%= tweet_presenter.created_at %>
         </span>
       </p>
-      <p class="mb-0"><%= tweet_presenter.body %></p>
+      <p><%= tweet_presenter.body %></p>
+
+      <div class="d-flex justify-content-between align-items-center action-links">
+        <div>
+          <%= link_to "#", class: "text-decoration-none text-black views" do %>
+            <%= image_tag "analise.png", size: "20x20", class: "me-1" %>
+            <span>a</span>
+          <% end %>
+        </div>
+        <div>
+          <%= link_to "#", class: "text-decoration-none text-black replies" do %>
+            <%= image_tag "bate-papo.png", size: "20x20", class: "me-1" %>
+            <span>a</span>
+          <% end %>
+        </div>
+        <div>
+          <%= link_to "#", class: "text-decoration-none text-black retweets" do %>
+            <%= image_tag "retweetar.png", size: "20x20", class: "me-1" %>
+            <span>a</span>
+          <% end %>
+        </div>
+        <div>
+          <%= link_to "#", class: "text-decoration-none text-black likes" do %>
+            <%= image_tag "gostar.png", size: "20x20", class: "me-1" %>
+            <span>a</span>
+          <% end %>
+        </div>
+        <div>
+          <%= link_to "#", class: "text-decoration-none text-black bookmark" do %>
+            <%= image_tag "compartilhar.png", size: "20x20", class: "me-1" %>
+            <span>a</span>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
 <% end %>
